# imgsearchtool

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: annotate_frames.py  export_onnx.py  record_video.py
src/fatigue_detection/: __init__.py  app.py  cli.py  config.py
src/fatigue_detection/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
src/fatigue_detection/evaluation/: __init__.py  comparison.py  metrics.py  visualization.py
src/fatigue_detection/fatigue/: __init__.py  alert.py  face_detector.py  landmarks.py
src/fatigue_detection/fatigue/classical/: __init__.py  classifier.py  ear.py  head_pose.py  hog_features.py  mar.py
src/fatigue_detection/fatigue/deep/: __init__.py  eye_cnn.py  fusion.py  mouth_cnn.py  temporal.py  train.py
src/fatigue_detection/gesture/: __init__.py  gesture_classifier.py  hand_detector.py  state_machine.py
src/fatigue_detection/utils/: __init__.py  drawing.py  timing.py  video.py
src/imgsearchtool/: __init__.py  cli.py  config.py  dataset.py  pipeline.py
src/imgsearchtool/evaluation/: __init__.py  metrics.py
src/imgsearchtool/features/: __init__.py  base.py  classical.py  deep.py  factory.py
src/imgsearchtool/index/: __init__.py  bruteforce.py
tests/: test_fatigue_classical.py  test_fatigue_deep.py  test_gestures.py  test_pipeline.py
