[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatigue-detection"
version = "0.1.0"
description = "Driver fatigue detection system with gesture-based activation using classical and deep learning pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "mediapipe>=0.10",
  "dlib>=19.24",
  "torch>=2.0",
  "torchvision>=0.15",
  "scikit-learn>=1.3",
  "Pillow>=10.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1",
]

[project.scripts]
fatigue-detect = "fatigue_detection.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
